--- a/index.html
+++ b/index.html
@@ -441,9 +441,9 @@
 
     <div class="header-container">
         <button class="overview-btn" onclick="toggleModal()">🗺️ 总览</button>
-        <img src="poster.jpg" alt="海报" class="header-poster" onerror="this.style.display='none'">
+        <img src="poster.png" alt="海报" class="header-poster" onerror="this.style.display='none'">
         <div class="poster-placeholder">
-            <span>封面图待上传<br>(命名为 poster.jpg)</span>
+            <span>封面图待上传<br>(命名为 poster.png)</span>
         </div>
         <div class="header-title-box">
             <h1 class="main-title">SICILIA</h1>
@@ -528,8 +528,8 @@
                         class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
-                    <div class="img-placeholder">待上传: normanni.jpeg</div>
-                    <img src="normanni.jpeg" onerror="this.style.display='none'">
+                    <div class="img-placeholder">待上传: normanni.jpg</div>
+                    <img src="normanni.jpg" onerror="this.style.display='none'">
                 </div>
             </div>
         </div>
