Fix poster aspect ratio to show full image

--- a/index.html
+++ b/index.html
@@ -125,21 +125,22 @@
         .header-container {
             position: relative;
             width: 100%;
-            height: 35vh;
+            height: 45vh;
             overflow: hidden;
-            background: #ccc;
+            background: var(--bg-color);
             border-bottom: 5px solid var(--primary-dark);
         }
 
-        /* 修复海报问题: 提升海报层级 */
+        /* 修复海报问题: 使用 contain 完整显示图片，不裁剪 */
         .header-poster {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            filter: sepia(0.2) contrast(1.1);
+            object-fit: contain;
             display: block;
             position: relative;
             z-index: 2;
+            background-color: rgba(0, 0, 0, 0.03);
+            /* 轻微背景区分 */
         }
 
         .poster-placeholder {
