--- a/index.html
+++ b/index.html
@@ -230,8 +230,10 @@
         }
 
         /* --- 时间轴 --- */
+        /* --- 时间轴 --- */
         .timeline-container {
-            padding: 30px 15px 60px;
+            padding: 10px 15px 60px;
+            /* 减少顶部padding */
             max-width: 600px;
             margin: 0 auto;
         }
@@ -309,14 +311,29 @@
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
             border: 1px solid rgba(0, 0, 0, 0.05);
+            display: flex;
+            flex-direction: column;
+            /* 垂直排列防止遮挡 */
         }
 
         /* 地图容器 & 浮动按钮 */
         .map-section {
             position: relative;
-            height: 120px;
+            height: 150px;
+            /* 地图稍微增高 */
             width: 100%;
-            z-index: 1;
+            z-index: 10;
+            flex-shrink: 0;
+            /* 防止被压缩 */
+        }
+
+        .photo-wrapper {
+            height: 200px;
+            width: 100%;
+            border-top: 1px solid #eee;
+            position: relative;
+            background: #eee;
+            z-index: 5;
         }
 
         .map-container {
@@ -464,19 +481,20 @@
         <!-- 居中标题 -->
         <div class="header-title-box">
             <h1 class="main-title">SICILIA</h1>
-            <p class="sub-title">2.19 - 2.23 Winter Road Trip</p>
+            <p class="sub-title">Eternal Winter Journey</p>
+            <div style="width: 40px; height: 2px; background: #fff; margin: 15px auto;"></div>
+            <p style="font-size: 12px; opacity: 0.8; letter-spacing: 1px;">2.19 - 2.23 · 2026</p>
         </div>
+    </div>
 
-        <!-- 底部导航条 (放入海报内) -->
-        <div class="header-nav-bar">
-            <button onclick="toggleModal()" class="header-nav-link"
-                style="border: 1px solid rgba(255,255,255,0.6); background: rgba(255,255,255,0.15);">📅 行程总览</button>
-            <a href="#day-2-19" class="header-nav-link">2.19</a>
-            <a href="#day-2-20" class="header-nav-link">2.20</a>
-            <a href="#day-2-21" class="header-nav-link">2.21</a>
-            <a href="#day-2-22" class="header-nav-link">2.22</a>
-            <a href="#day-2-23" class="header-nav-link">2.23</a>
-        </div>
+    <!-- 底部导航条 (吸顶) -->
+    <div class="header-nav-bar">
+        <button onclick="toggleModal()" class="header-nav-link active-btn">📅 行程总览</button>
+        <a href="#day-2-19" class="header-nav-link">2.19</a>
+        <a href="#day-2-20" class="header-nav-link">2.20</a>
+        <a href="#day-2-21" class="header-nav-link">2.21</a>
+        <a href="#day-2-22" class="header-nav-link">2.22</a>
+        <a href="#day-2-23" class="header-nav-link">2.23</a>
     </div>
 
     <div class="timeline-container">
