Update title to SOUTH OF ITALY

--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
 
         <!-- 居中标题 -->
         <div class="header-title-box">
-            <h1 class="main-title">LOST IN SICILY</h1>
-            <p class="sub-title">Chasing The Mediterranean Winter Sun</p>
+            <h1 class="main-title">SOUTH OF ITALY</h1>
+            <p class="sub-title">A Winter Journey Into The True Sicily</p>
             <div style="width: 40px; height: 2px; background: #fff; margin: 15px auto;"></div>
             <p style="font-size: 12px; opacity: 0.8; letter-spacing: 1px;">Feb 19 - 23 · 2026</p>
         </div>
