--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>意大利以南，西西里冬季寻真之旅</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Noto+Serif+SC:wght@500;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Italiana&family=Cinzel:wght@700&family=Noto+Serif+SC:wght@500;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -222,12 +223,15 @@
         }
 
         .main-title {
-            font-family: 'Cinzel', serif;
-            font-size: 32px;
-            /* 缩小标题 */
+            font-family: 'Italiana', serif;
+            /* 更优雅、艺术感更强的字体 */
+            font-size: 38px;
+            /* 字体纤细，可以稍微大一点 */
             margin: 0;
-            letter-spacing: 4px;
-            font-weight: 800;
+            letter-spacing: 2px;
+            /* Italiana 本身比较宽 */
+            font-weight: 400;
+            /* 不需要太粗 */
             line-height: 1.1;
         }
 
