--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     </div>
 
     <div class="header-container">
-        <img src="poster.jpg" alt="海报" class="header-poster" onerror="this.style.display='none'">
+        <img src="poster.jpg?v=2" alt="海报" class="header-poster" onerror="this.style.display='none'">
         <div class="poster-placeholder">
             <span>封面图待上传<br>(命名为 poster.jpg)</span>
         </div>
