--- a/index.html
+++ b/index.html
@@ -328,9 +328,8 @@
             border: 1px solid rgba(0, 0, 0, 0.05);
             display: flex;
             flex-direction: column;
-            /* 垂直排列防止遮挡 */
-            gap: 4px;
-            /* 地图与图片之间的空隙 */
+            gap: 10px;
+            /* 增加地图与图片之间的间距 */
         }
 
         /* 地图容器 & 浮动按钮 */
@@ -347,7 +346,6 @@
         .photo-wrapper {
             height: 200px;
             width: 100%;
-            border-top: 1px solid #eee;
             position: relative;
             background: #eee;
             z-index: 5;
@@ -517,9 +515,9 @@
     </div>
 
     <div class="header-container">
-        <img src="poster.jpg?v=2" alt="海报" class="header-poster" onerror="this.style.display='none'">
+        <img src="poster.png" alt="海报" class="header-poster" onerror="this.style.display='none'">
         <div class="poster-placeholder">
-            <span>封面图待上传<br>(命名为 poster.jpg)</span>
+            <span>封面图待上传<br>(命名为 poster.png)</span>
         </div>
 
         <!-- 居中标题 -->
