--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
             height: auto;
             display: block;
             position: relative;
-            z-index: 1;
+            z-index: 2;
+            /* 确保在placeholder之上 */
             /* 移除 object-fit: cover 以防裁剪，让图片自然撑开容器 */
         }
 
