Update to new poster.jpg

--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@
     </div>
 
     <div class="header-container">
-        <img src="poster.png" alt="海报" class="header-poster" onerror="this.style.display='none'">
+        <img src="poster.jpg" alt="海报" class="header-poster" onerror="this.style.display='none'">
         <div class="poster-placeholder">
-            <span>封面图待上传<br>(命名为 poster.png)</span>
+            <span>封面图待上传<br>(命名为 poster.jpg)</span>
         </div>
 
         <!-- 居中标题 -->
