--- a/index-amap.html
+++ b/index-amap.html
@@ -515,9 +515,9 @@
     </div>
 
     <div class="header-container">
-        <img src="poster.png" alt="海报" class="header-poster" onerror="this.style.display='none'">
+        <img src="poster.jpg" alt="海报" class="header-poster" onerror="this.style.display='none'">
         <div class="poster-placeholder">
-            <span>封面图待上传<br>(命名为 poster.png)</span>
+            <span>封面图待上传<br>(命名为 poster.jpg)</span>
         </div>
 
         <!-- 居中标题 -->
@@ -552,8 +552,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-1-1" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Airport" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Airport"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
             </div>
         </div>
@@ -563,8 +563,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-1-2" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Quattro+Canti+Palermo" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Quattro+Canti+Palermo"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: quattro_canti.jpg</div>
@@ -585,8 +585,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-1-3" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palazzo+Scavone+Palermo" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palazzo+Scavone+Palermo"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="remark-box">
                     <details open>
@@ -603,8 +603,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-1-4" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palazzo+dei+Normanni" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palazzo+dei+Normanni"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: normanni.jpg</div>
@@ -619,8 +619,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-1-5" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: teatro.jpg</div>
@@ -646,8 +646,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-2-1" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Mercato+Ballaro" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Mercato+Ballaro"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: ballaro.jpg</div>
@@ -668,8 +668,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-2-2" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Scala+dei+Turchi" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Scala+dei+Turchi"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: scala.jpg</div>
@@ -684,8 +684,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-2-3" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Valle+dei+Templi" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Valle+dei+Templi"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: valle.jpg</div>
@@ -734,8 +734,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-3-1" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral6" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral6"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: ortigia.jpg</div>
@@ -756,8 +756,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-3-2" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral7" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral7"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: noto.jpg</div>
@@ -778,8 +778,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-3-3" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral8" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral8"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
             </div>
         </div>
@@ -811,8 +811,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-4-2" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral9" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Palermo+Cathedral9"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: etna.jpg</div>
@@ -834,8 +834,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-4-3" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo0" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo0"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: catania.jpg</div>
@@ -862,8 +862,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-5-1" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo1" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo1"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: taormina.jpg</div>
@@ -877,8 +877,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-5-2" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo2" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo2"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="photo-wrapper">
                     <div class="img-placeholder">待上传: lunch.jpg</div>
@@ -899,8 +899,8 @@
             <div class="card">
                 <div class="map-section">
                     <div id="map-5-3" class="map-container"></div><a
-                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo3" target="_blank"
-                        class="nav-btn-float">📍 导航</a>
+                        href="https://uri.amap.com/marker?position=https://www.google.com/maps/search/?api=1&query=name=Teatro+Massimo+Palermo3"
+                        target="_blank" class="nav-btn-float">📍 导航</a>
                 </div>
                 <div class="remark-box">
                     <details open>
